# robopoker

./: .gbrain-source  .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  README.md  loop.sh  wrangler.toml
.auto/orchestrator/2026-06-10-bp-bridge/: closeout.md
crates/auth/: Cargo.toml
crates/auth/src/: claims.rs  crypto.rs  dto.rs  handlers.rs  lib.rs  member.rs  middleware.rs  repository.rs  session.rs
crates/auth/tests/: server_flow.rs
crates/autotrain/: Cargo.toml
crates/autotrain/src/: bench.rs  doctor.rs  epoch.rs  error.rs  error_audit.rs  export_blueprint.rs  fast.rs  fast2.rs  fast3.rs  integrity.rs  lib.rs  mode.rs  observe.rs  pretraining.rs  publish.rs  publish_index.rs  publish_index_remote.rs  publish_remote.rs  receipt.rs  replay.rs  trainer.rs  verify_bundle.rs  verify_receipt.rs
crates/autotrain/src/workers/: worker.rs
crates/autotrain/tests/: bench.rs  bench_report_fixture.rs  compare.rs  compare3.rs  doctor.rs  live_proof.rs  live_proof_receipt.rs  plan_staleness.rs  publish.rs  publish_index.rs  publish_index_remote.rs  publish_remote.rs  script_shape.rs  seat_collapse.rs  setup_testnet_postgres.rs  smoke.rs  trainer_observe.rs  verify_receipt.rs  workspace_parallel_proof.rs  workspace_parallel_proof_three.rs
crates/autotrain/tests/fixtures/: bench-report-fixture.json  bench-report-fixture.json.sha256
crates/autotrain/tests/fixtures/publish-fixture/: README.md  bundle.sha256  manifest.json
crates/autotrain/tests/fixtures/testnet-live-proof-fixture/: ENV.txt  README.md  SUMMARY.txt  recipe.json
crates/cards/: Cargo.toml
crates/cards/src/: card.rs  deck.rs  hand.rs  isomorphism.rs  observation.rs  rank.rs  street.rs  suit.rs
crates/clustering/: Cargo.toml
crates/clustering/src/: emd.rs  future.rs  kmeans.rs  layer.rs  lib.rs  lookup.rs  metric.rs  tests.rs
crates/clustering/tests/: kmeans_fast.rs  kmeans_property.proptest-regressions  kmeans_property.rs  lookup_fast.rs
crates/dashboard/: Cargo.toml
crates/dashboard/examples/: e2e_serve.rs
crates/dashboard/src/: index_client.rs  lib.rs  render.rs  router.rs
crates/dashboard/static/: index.html
crates/dashboard/tests/: fixtures_smoke.rs  seed_local.rs  smoke.rs
crates/dashboard/tests/fixtures/: INDEX.json  compare3-fixture.json  index-missing-basename.json  index.json  transcript-testnet-live-proof-20260604T050000Z.json
crates/database/src/: check.rs  check2.rs  check3.rs  lib.rs  schema.rs  stage.rs  stage2.rs  stage3.rs  traits.rs
crates/database/tests/: check_clustered.rs
crates/gameplay/: Cargo.toml
crates/gameplay/src/: abstraction.rs  action.rs  arrangement.rs  edge.rs  game.rs  odds.rs  partial.rs  path.rs  recall.rs  turn.rs
crates/gameroom/: Cargo.toml
crates/gameroom/src/: repository.rs  room.rs
crates/gameroom/src/players/: blufferbot.rs  callstation.rs  database.rs  database_v2.rs  database_v3.rs  equitybot.rs  maniac.rs  mod.rs  preflopbot.rs  realtime.rs  tight.rs  zerotemp.rs
crates/gameroom/src/records/: hand.rs  mod.rs  participant.rs  play.rs  transcript.rs
crates/gameroom/tests/: hand_roundtrip.rs
crates/mccfr/: Cargo.toml
crates/mccfr/src/regret/: discounted.rs
crates/mccfr/src/solver/: encounter.rs
crates/nlhe/: Cargo.toml
crates/nlhe/src/: edge.rs  encoder.rs  info.rs  lib.rs  profile.rs  profile_v2.rs  profile_v3.rs  public.rs  secret.rs  sink.rs  solver.rs  source.rs  strategy.rs  turn.rs
crates/nlhe/tests/: position_persistence.rs  serde_test.rs
crates/rbp/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/server/src/analysis/: api.rs  cli.rs  handlers.rs
crates/server/tests/: analysis_cli.rs  dto_wire.rs
crates/transport/src/: greedy.rs  greenkhorn.rs  lib.rs  measure.rs  tests.rs
crates/transport/src/coupling/: greedy.rs  mod.rs  sinkhorn.rs
crates/util/src/: lib.rs
crates/util/src/dto/: response.rs
genesis/plans/: 000-ceo-testnet-roadmap.md
scripts/: _build_publish_fixture.py  commit-bench-fixture.sh  deploy-dashboard-cloudflare.md  deploy-dashboard-cloudflare.sh  plan-staleness-gate.sh  seed-dashboard-local.sh  setup-testnet-postgres.md  setup-testnet-postgres.sh  testnet-live-proof.md  testnet-live-proof.sh  testnet-live-publish-dashboard.md  testnet-live-publish-dashboard.sh  testnet-live-publish-index-s3.md  testnet-live-publish-index-s3.sh  testnet-live-publish-index.md  testnet-live-publish-index.sh  testnet-live-publish-s3.sh  testnet-live-publish.md  testnet-live-publish.sh  trainer-observe.sh  workspace-parallel-proof-three.sh  workspace-parallel-proof.sh
specs/: commonware-integration.md  multiplayer-enhancements.md  terminal-ui.md
